--- a/config/database.yml
+++ b/config/database.yml
@@ -32,11 +32,4 @@ test:
   socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: hackathon_app_production
-  pool: 5
-  username: root
-  password: root
-  socket: /var/run/mysqld/mysqld.sock
+  url: <%= ENV['DATABASE_URL'] %>
